--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "geoip-lite": "^1.4.10",
     "mongoose": "^8.17.1",
-    "nanoid": "^5.1.5"
+    "nanoid": "^5.1.5",
+    "redis": "^5.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
