Added authentication using json web token

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "geoip-lite": "^1.4.10",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "nanoid": "^5.1.5",
     "redis": "^5.8.1"
